@@ -39,8 +39,14 @@ public class SpanPositionRangeQuery extends SpanPositionCheckQuery {
 
 
   @Override
-  protected boolean acceptPosition(Spans spans) throws IOException {
-    return spans.start() >= start && spans.end() <= end;
+  protected AcceptStatus acceptPosition(Spans spans) throws IOException {
+    assert spans.start() != spans.end();
+    if (spans.start() >= end)
+      return AcceptStatus.NO_AND_ADVANCE;
+    else if (spans.start() >= start && spans.end() <= end)
+      return AcceptStatus.YES;
+    else
+      return AcceptStatus.NO;
   }
 
 
